# airmaster-adapter-esp32

./: .gitignore  CMakeLists.txt  ESP32-S3_MIGRATION.md  IMPROVEMENTS.md  QUICKSTART.md  README.md  REVIEW_SUMMARY.md  build.sh  deploy-core.sh  deploy-fs.sh  flash-all.sh  flash-monitor.sh  flash.sh  increment_version.sh  monitor.sh  partitions.csv  sdkconfig.defaults  upload_spiffs.sh
main/: CMakeLists.txt  am7.c  am7.h  captive_portal.c  captive_portal.h  config.h  crashlog.c  crashlog.h  idf_component.yml  main.c  mqtt.c  mqtt.h  ota.c  ota.h  settings.c  settings.h  spiffs.c  spiffs.h  version.h  webserver.c  wifi_manager.c  wifi_manager.h
spiffs/: app.js  index.html  logs.html  ota.html  sensor.html  sensor.js  settings.html  settings.js  setup.html  style.css
